--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-spinners": "^0.2.5",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
+    "socket.io-client": "^2.0.4",
     "styled-components": "^2.4.0"
   }
 }
