--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "history": "^4.6.3",
+    "moment": "^2.20.1",
     "react": "^15.6.1",
     "react-autocomplete": "^1.7.2",
     "react-dom": "^15.6.1",
@@ -49,9 +50,11 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "react-spinners": "^0.2.5",
+    "recharts": "^1.0.0-beta.9",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.4",
-    "styled-components": "^2.4.0"
+    "styled-components": "^2.4.0",
+    "underscore": "^1.8.3"
   }
 }
