--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,34 @@
 {
-    parser: 'babel-eslint',
-    extends: ['eslint:recommended', 'plugin:react/recommended', 'standard'],
-    plugins: ['react']
+  "extends": "airbnb",
+  "parser": "babel-eslint",
+  "plugins": [
+    "react",
+    "jsx-a11y",
+    "import"
+  ],
+  "rules": {
+    "comma-dangle": ["off"],
+    "eqeqeq": ["off"],
+    "global-require": ["off"],
+    "jsx-a11y/no-static-element-interactions": ["off"],
+    "linebreak-style": ["off"],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "import/no-named-as-default": ["off"],
+    "no-console":0,
+    "no-underscore-dangle": "off",
+    "react/jsx-closing-bracket-location": ["off"],
+    "react/jsx-space-before-closing": ["off"],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/require-default-props": ["off"]
+  },
+  "globals": {
+    "document": true,
+    "window": true,
+    "XMLHttpRequest": true,
+    "FormData": true,
+    "require": true,
+    "localStorage": true,
+    "navigator": true,
+    "tracking": true
+  }
 }
