--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server",
-    "production": "webpack -p",
+    "clean": "rimraf dist/*",
+    "compile:production": "npm run clean && webpack -p",
+    "compile:development": "npm run clean && webpack --env development",
+    "fix": "eslint --fix src/.; exit 0",
     "lint": "eslint src/.; exit 0",
-    "fix": "eslint --fix src/.; exit 0"
+    "start": "webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -22,8 +24,11 @@
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.2.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^5.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
