--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios": "^0.17.1",
     "history": "^4.6.3",
     "moment": "^2.20.1",
+    "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-autocomplete": "^1.7.2",
     "react-dom": "^15.6.1",
