--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "recharts": "^1.0.0-beta.9",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
+    "rxjs": "^5.5.6",
     "socket.io-client": "^2.0.4",
     "styled-components": "^2.4.0",
     "underscore": "^1.8.3"
